[gd_scene load_steps=9 format=3 uid="uid://yufh4cadm83p"]

[ext_resource type="Texture2D" uid="uid://cbbxpvxjgrrhj" path="res://assets/Enemies/Knights/Templar.png" id="1_386i0"]
[ext_resource type="Script" path="res://npcs/guard/detection_area.gd" id="2_3thvc"]
[ext_resource type="Texture2D" uid="uid://chmeya04qtohw" path="res://assets/UI/UI_Icons.png" id="3_wdl6s"]

[sub_resource type="Animation" id="Animation_cjxu8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7p3j8"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvunu"]
_data = {
"RESET": SubResource("Animation_cjxu8"),
"idle_down": SubResource("Animation_7p3j8")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_km0gr"]
radius = 9.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xumhi"]
size = Vector2(11, 8)

[node name="Guard" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 47
platform_on_leave = 2
platform_floor_layers = 4294967042

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -15)
texture = ExtResource("1_386i0")
hframes = 6
vframes = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hvunu")
}
autoplay = "idle_down"

[node name="detection_area" type="Area2D" parent="."]
script = ExtResource("2_3thvc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-1, -5)
shape = SubResource("CircleShape2D_km0gr")
debug_color = Color(0.285734, 0.630518, 0, 0.42)

[node name="ChatIcon" type="Sprite2D" parent="detection_area"]
visible = false
position = Vector2(-2, -26)
texture = ExtResource("3_wdl6s")
hframes = 8
vframes = 8
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(-1.5, -4)
shape = SubResource("RectangleShape2D_xumhi")

[connection signal="body_entered" from="detection_area" to="detection_area" method="_on_body_entered"]
[connection signal="body_exited" from="detection_area" to="detection_area" method="_on_body_exited"]
